--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "ag-grid-react": "^32.3.3",
+    "axios": "^1.7.8",
     "bson": "^6.10.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
